<resources>
    <string name="app_name">微胎心</string>
    <!--title-->
    <string name="title_login">登录</string>
    <string name="title_register">手机号注册</string>
    <string name="title_reset_password">重新设置密码</string>
    <string name="title_personal_information">完善个人信息</string>
    <string name="title_choose_picture">选择图片</string>
    <string name="title_preview_picture">预览</string>
    <!--operation-->
    <string name="register">注册</string>
    <string name="sms_login">注册码登陆</string>

    <string name="pick">选取</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="send_sms_code">发送验证码</string>

    <string name="hint_input_mobile">输入手机号</string>
    <string name="hint_input_sms">输入验证码</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_monitor">MonitorActivity</string>
    <string name="title_activity_curve_detial">CurveDetialActivity</string>
    <string name="waring_empty_username">用户名不能为空</string>
    <string name="auto_upload">WIFI环境下自动上传</string>


    <!-- activity_about-->
    <string name="subtitle">胎儿安全监护医生</string>
    <string name="version">版本：</string>
    <string name="welcome">欢迎页面</string>
    <string name="feature">产品功能</string>
    <string name="use_process">使用流程</string>
    <string name="update">产品更新</string>
    <string name="use_protocol">使用条款和隐私协议</string>
    <string name="company">春闱科技    版权所有</string>
    <string name="copyright">Copyright@2013-2015 Chunwei All Right Reserved</string>
    <string name="about_title">关于微胎心</string>


    <!--cn.ihealthbaby.weitaixin.ui.mine.WelcomeActiviy-->
    <string name="welcome_title">欢迎界面</string>

    <!--cn.ihealthbaby.weitaixin.ui.mine.FeatureActiviy-->
    <string name="feature_title">产品功能</string>

    <!--cn.ihealthbaby.weitaixin.ui.mine.UseProcessActiviy-->
    <string name="use_process_title">使用流程</string>
    <string name="use_protocol_title">使用协议</string>
    <string name="title_activity_pay_account">PayAccountActivity</string>
    <string name="title_activity_record_play">RecordPlayActivity</string>
    <string name="title_activity_curve_play">CurvePlayActivity</string>

    <!---->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
</resources>
