<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray17"
              android:orientation="vertical">

    <include
        android:id="@+id/head_title_id"
        layout="@layout/layout_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_dp_10"
                    android:text="@string/app_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_welcome"
                    style="@style/wo_info_item"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="23dp"
                        android:singleLine="true"
                        android:text="欢迎页"
                        android:textColor="@drawable/text_color_hei_selector"
                        android:textSize="@dimen/font_normal"/>

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="22dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/wo_head_arrow_right"
                        android:visibility="visible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_function"
                    style="@style/wo_info_item"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="23dp"
                        android:singleLine="true"
                        android:text="产品功能"
                        android:textColor="@drawable/text_color_hei_selector"
                        android:textSize="@dimen/font_normal"/>

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="22dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/wo_head_arrow_right"
                        android:visibility="visible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_use"
                    style="@style/wo_info_item"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="23dp"
                        android:singleLine="true"
                        android:text="使用流程"
                        android:textColor="@drawable/text_color_hei_selector"
                        android:textSize="@dimen/font_normal"/>

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="22dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/wo_head_arrow_right"
                        android:visibility="visible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_update"
                    style="@style/wo_info_item"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="23dp"
                        android:singleLine="true"
                        android:text="版本更新"
                        android:textColor="@drawable/text_color_hei_selector"
                        android:textSize="@dimen/font_normal"/>

                    <ImageView
                        android:id="@+id/tv_message_count"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_version_name"
                        android:src="@drawable/version_new"
                        android:visibility="visible"/>

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="22dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/wo_head_arrow_right"
                        android:visibility="visible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_protocol"
                    style="@style/wo_info_item"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="23dp"
                        android:singleLine="true"
                        android:text="使用条款和协议"
                        android:textColor="@drawable/text_color_hei_selector"
                        android:textSize="@dimen/font_normal"/>

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="16dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="22dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/wo_head_arrow_right"
                        android:visibility="visible"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_dp_10"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dimen_dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>